--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>samna clinc - We Are Best Dental Service</title>
+  <title>samna clinc - We Are The Best Dental Service</title>
 
   <!-- 
     - favicon
@@ -493,7 +493,7 @@
                 </div>
 
                 <h3 class="h3">
-                  <a href="#" class="card-title">chink hue-sue</a>
+                  <a href="#" class="card-title">chink hoe-sue</a>
                 </h3>
 
                 <p class="card-subtitle">Dentist</p>
