--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 
             <p class="section-subtitle">Welcome To samna clinc</p>
 
-            <h1 class="h1 hero-title">We Are Best Dental Service</h1>
+            <h1 class="h1 hero-title">We Are The Best Dental Service</h1>
 
             <p class="hero-text">
               Samna Clinic offers high-quality dental care in an extremely friendly, personal, and professional environment.  <br>
