--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@
                 </div>
 
                 <h3 class="h3">
-                  <a href="#" class="card-title">Ella Thompson</a>
+                  <a href="#" class="card-title">niggarita slavery</a>
                 </h3>
 
                 <p class="card-subtitle">Dentist</p>
