--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>samna clinc - We Are The Best Dental Service</title>
+  <title>samna clinc - Your Best Choice for Dental Services</title>
 
   <!-- 
     - favicon
@@ -147,7 +147,7 @@
 
             <p class="section-subtitle">Welcome To samna clinc</p>
 
-            <h1 class="h1 hero-title">We Are The Best Dental Service</h1>
+            <h1 class="h1 hero-title">Your Best Choice  for  Dental Services </h1>
 
             <p class="hero-text">
               Samna Clinic offers high-quality dental care in an extremely friendly, personal, and professional environment.  <br>
@@ -361,9 +361,9 @@
       <section class="section doctor" aria-label="doctor">
         <div class="container">
 
-          <p class="section-subtitle text-center">Our Doctor</p>
+          <p class="section-subtitle text-center">Our Doctors</p>
 
-          <h2 class="h2 section-title text-center">Best Expert Dentist</h2>
+          <h2 class="h2 section-title text-center">Best Dental Experts</h2>
 
           <ul class="has-scrollbar">
 
