--- a/index.html
+++ b/index.html
@@ -454,7 +454,7 @@
                 </div>
 
                 <h3 class="h3">
-                  <a href="#" class="card-title">chang nigr-ching</a>
+                  <a href="#" class="card-title">chink nigr-chang</a>
                 </h3>
 
                 <p class="card-subtitle">Dentist</p>
@@ -493,7 +493,7 @@
                 </div>
 
                 <h3 class="h3">
-                  <a href="#" class="card-title">chink hoe-sue</a>
+                  <a href="#" class="card-title">dong hoe-sue</a>
                 </h3>
 
                 <p class="card-subtitle">Dentist</p>
