--- a/index.html
+++ b/index.html
@@ -653,7 +653,7 @@
                 <div class="card-content">
 
                   <h3 class="h3">
-                    <a href="#" class="card-title">not the first time, she makes it </a>
+                    <a href="#" class="card-title">not the first time, she makes it again! </a>
                   </h3>
 
                   <p class="card-text">
