--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           <li class="contact-item">
             <ion-icon name="mail-outline"></ion-icon>
 
-            <a href="mailto:info@example.com" class="contact-link">info@example.com</a>
+            <a href="mailto:muhammad.zayeddd@gmail.com" class="footer-link">best=dental-care@salma.com</a>
           </li>
 
           <li class="contact-item">
@@ -850,7 +850,7 @@
               <ion-icon name="mail-outline"></ion-icon>
             </div>
 
-            <a href="mailto:help@example.com" class="footer-link">help@example.com</a>
+            <a href="mailto:muhammad.zayeddd@gmail.com" class="footer-link">best=dental-care@salma.com</a>
           </li>
 
         </ul>
