--- a/index.html
+++ b/index.html
@@ -457,7 +457,7 @@
                   <a href="#" class="card-title">chink nigr-chang</a>
                 </h3>
 
-                <p class="card-subtitle"> worst dentist in history </p>
+                <p class="card-subtitle"> dentist  </p>
 
                 <ul class="card-social-list">
 
