--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
             </p>
 
             <p class="section-text">
-               Our passion also shows in each individual who works on our team. The MDC team has years of experience giving patients a high level of care in a comfortable atmosphere
+               Our passion also shows in each individual who works on our team. The clinc team has years of experience giving patients a high level of care in a comfortable atmosphere
             </p>
 
             <a href="#" class="btn">Read more</a>
