--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           <li class="contact-item">
             <ion-icon name="mail-outline"></ion-icon>
 
-            <a href="mailto:muhammad.zayeddd@gmail.com" class="footer-link">best=dental-care@salma.com</a>
+            <a href="mailto:muhammad.zayeddd@gmail.com" class="footer-link">best-dental-care@salma.com</a>
           </li>
 
           <li class="contact-item">
@@ -147,7 +147,7 @@
 
             <p class="section-subtitle">Welcome To samna clinc</p>
 
-            <h1 class="h1 hero-title">Your Best Choice  for  Dental Services </h1>
+            <h1 class="h1 hero-title">Your Best  Choice  for    Dental Services </h1>
 
             <p class="hero-text">
               Samna Clinic offers high-quality dental care in an extremely friendly, personal, and professional environment.  <br>
@@ -850,7 +850,7 @@
               <ion-icon name="mail-outline"></ion-icon>
             </div>
 
-            <a href="mailto:muhammad.zayeddd@gmail.com" class="footer-link">best=dental-care@salma.com</a>
+            <a href="mailto:muhammad.zayeddd@gmail.com" class="footer-link">best-dental-care@salma.com</a>
           </li>
 
         </ul>
